[PF-1099] Add alpha version of list jobs in workspace (#527)
 - add new alpha1 path and define enumerateJobs
 - add new controller
 - add Alpha1Service
 - add enumeration dumper for testing
 - Modified job params for better enumeration. ConnectedResourceServiceTest works and dumps
 - Refactor makeResources into ResourceMaker. Add job enumeration test
