# service/src/main/resources/api/service_openapi.yaml
@@ -2044,6 +2044,38 @@ paths:
         '500':
           $ref: '#/components/responses/ServerError'
 
+  ## ALPHA1 paths
+  ## These endpoints are only supported if the alpha1 feature flag is enabled.
+  ## They are no compatibility guarantees. The endpoints and related components
+  ## may change without notice.
+
+  /api/workspaces/alpha1/{workspaceId}/jobs:
+    parameters:
+      - $ref: '#/components/parameters/WorkspaceId'
+      - $ref: '#/components/parameters/Limit'
+      - $ref: '#/components/parameters/PageToken'
+      - $ref: '#/components/parameters/ResourceType'
+      - $ref: '#/components/parameters/StewardshipType'
+      - $ref: "#/components/parameters/ResourceName"
+      - $ref: '#/components/parameters/JobStateFilter'
+    get:
+      summary: |
+        Enumerate recent jobs run in a workspace. The enumeration includes both running
+        and completed jobs. It is ordered by start time of the job.
+      operationId: enumerateJobs
+      tags: [Alpha1]
+      responses:
+        '200':
+          $ref: '#/components/responses/EnumerateJobsResponse'
+        '400':
+          $ref: '#/components/responses/BadRequest'
+        '403':
+          $ref: '#/components/responses/PermissionDenied'
+        '404':
+          $ref: '#/components/responses/NotFound'
+        '500':
+          $ref: '#/components/responses/ServerError'
+
 components:
   parameters:
     ## DEPRECATED PARAMETERS ##
@@ -2169,6 +2201,32 @@ components:
       required: true
       schema:
         $ref: '#/components/schemas/CloudPlatform'
+
+    ## ALPHA1 Parameters
+    ## They are no compatibility guarantees. The parameters may change without notice.
+    PageToken:
+      name: pageToken
+      in: query
+      description: A previously returned page token describing where to resume an enumeration.
+      required: false
+      schema:
+        type: string
+
+    JobStateFilter:
+      name: jobState
+      in: query
+      description: The state of jobs to return (ALL, ACTIVE, COMPLETED)
+      required: false
+      schema:
+        $ref: '#/components/schemas/JobStateFilter'
+
+    ResourceName:
+      name: name
+      in: query
+      description: A name used to identify an object in the workspace manager
+      required: false
+      schema:
+        $ref: '#/components/schemas/Name'
 
   schemas:
     CloneReferencedResourceRequestBody:
@@ -2492,6 +2550,14 @@ components:
             a ShortUUID, or other globally unique identifier.
           type: string
         # TODO: In the future, notification configuration will also be part of JobControl.
+
+    # ALPHA1:
+    JobStateFilter:
+      type: string
+      enum:
+        - ALL
+        - ACTIVE
+        - COMPLETED
 
     Name:
       type: string
@@ -4277,6 +4343,76 @@ components:
       type: string
       enum: ['REFERENCED', 'CONTROLLED']
 
+    ## ALPHA1 schemas
+    ## These schemas are only by alpha1 paths
+    ResourceUnion:
+      type: object
+      description: |
+        This object contains a reference to an object for each resource type.
+        Exactly one will be populated based on its ResourceType.
+      properties:
+        gcpBqDataset:
+          $ref: '#/components/schemas/GcpBigQueryDatasetResource'
+        gcpBqDataTable:
+          $ref: '#/components/schemas/GcpBigQueryDataTableResource'
+        gcpDataRepoSnapshot:
+          $ref: '#/components/schemas/DataRepoSnapshotResource'
+        gcpGcsBucket:
+          $ref: '#/components/schemas/GcpGcsBucketResource'
+        gcpGcsObject:
+          $ref: '#/components/schemas/GcpGcsObjectResource'
+        gcpAiNotebookInstance:
+          $ref: '#/components/schemas/GcpAiNotebookInstanceResource'
+        azureIp:
+          $ref: '#/components/schemas/AzureIpResource'
+        azureDisk:
+          $ref: '#/components/schemas/AzureDiskResource'
+        azureNetwork:
+          $ref: '#/components/schemas/AzureDiskResource'
+        azureVm:
+          $ref: '#/components/schemas/AzureVmResource'
+        azureStorageAccount:
+          $ref: '#/components/schemas/AzureStorageResource'
+
+    OperationType:
+      type: string
+      description: Types of job operations
+      enum: [ 'CLONE', 'CREATE', 'DELETE', 'UPDATE', 'UNKNOWN' ]
+
+    EnumeratedJob:
+      description: |
+        One job returned by the enumerate jobs request. The jobReport is always present.
+        If the job failed, the error report is present. Depending on the operation, the
+        resource information
+      type: object
+      properties:
+        jobReport:
+          $ref: '#/components/schemas/JobReport'
+        errorReport:
+          $ref: '#/components/schemas/ErrorReport'
+        jobDescription:
+          type: string
+        operationType:
+          $ref: '#/components/schemas/OperationType'
+        resourceType:
+          $ref: '#/components/schemas/ResourceType'
+        resource:
+          $ref: '#/components/schemas/ResourceUnion'
+
+    EnumerateJobsResult:
+      description: result of an enumerateJobs request
+      type: object
+      properties:
+        totalResults:
+          type: integer
+        pageToken:
+          type: string
+        results:
+          description: List of enumerated jobs
+          type: array
+          items:
+            $ref: '#/components/schemas/EnumeratedJob'
+
   responses:
     ### DEPRECATED RESPONSES ###
     # TODO(PF-404): remove this in favor of reference-type specific objects.
@@ -4604,6 +4740,15 @@ components:
         application/json:
           schema:
             $ref: '#/components/schemas/ErrorReport'
+
+    ## ALPHA1 Responses
+    ## They are no compatibility guarantees. The responses may change without notice.
+    EnumerateJobsResponse:
+      description: Listing of recent jobs
+      content:
+        application/json:
+          schema:
+            $ref: '#/components/schemas/EnumerateJobsResult'
 
   securitySchemes:
     bearerAuth:
